# salt-to-taste

./: .env.example  .gitignore  ANTIGRAVITY.md  README.md  output.json
backend/: check_db2.py  check_db3.py  create_test_images.py  pyproject.toml  test_pg.py
backend/alembic/: env.py
backend/alembic/versions/: 4f0f4df45921_initial_schema.py
backend/app/: main.py
backend/app/agents/: culinary_analyst.py  parsing_agent.py  personalization_engine.py  state.py
backend/app/api/: feedback.py  health.py  palate.py  recipes.py  recommendations.py  router.py  salt.py  users.py
backend/app/core/: config.py  database.py  ollama.py
backend/app/graphs/: recipe_pipeline.py
backend/app/models/: __init__.py  palate_profile.py  recipe.py  recipe_salt_recommendation.py  salt_type.py  user.py  user_feedback.py
backend/app/schemas/: __init__.py  feedback.py  health.py  palate.py  recipe.py  recommendation.py  salt_converter.py  user.py
backend/app/services/: palate_service.py  recipe_service.py  rescue_service.py  salt_service.py  scaling_service.py  sodium_breakdown_service.py  swap_service.py  (+2 more)
backend/tests/: test_culinary_analyst.py  test_feedback_loop.py  test_health.py  test_health_endpoints.py  test_image_edge_cases.py  test_image_upload.py  test_image_utils.py  test_low_sodium.py  test_palate_service.py  test_parsing_agent.py  test_personalization.py  test_pipeline.py  test_rescue_service.py  test_salt_service.py  test_scaling_service.py  test_sodium_breakdown.py  test_sodium_tracking.py  test_swap_service.py  test_user_sodium_limit.py  test_vision_parsing.py
(+38 files in other folders)
